--- a/Notebooks/Simons Attempt.ipynb
+++ b/Notebooks/Simons Attempt.ipynb
@@ -1094,9 +1094,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:deep_learning_1] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-deep_learning_1-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1108,7 +1108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
