Added people count loss and estimation of beta and alpha from sparse data only in begnning. Still needs further work.

--- a/Notebooks/Simons Attempt 2.ipynb
+++ b/Notebooks/Simons Attempt 2.ipynb
@@ -24,7 +24,7 @@
     "from softadapt import SoftAdapt, NormalizedSoftAdapt, LossWeightedSoftAdapt\n",
     "\n",
     "if torch.cuda.is_available():\n",
-    "    my_device = 'cpu' # I think I may have broken the cuda version\n",
+    "    my_device = 'cuda' # I think I may have broken the cuda version\n",
     "else:\n",
     "    my_device = 'cpu'\n",
     "    \n"
@@ -835,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
